# mathm-chess

chess-engine/src/: board.rs  error.rs  game.rs  lib.rs  piece.rs  tests.rs  util.rs
chess-engine/src/piece/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs  util.rs
gui/: Cargo.toml
gui/src/: entities.rs  main.rs
termapp/src/: main.rs
