[package]
name = "gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-engine = { path = "../chess-engine" }
bevy = "0.5"
bevy-inspector-egui = "0.6"
rand = "0.8"

[dev-dependencies]
bevy = { version = "0.5", features = ["dynamic"] }